--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "moment": "^2.29.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "babel-loader": "^8.1.0",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12"
   }
